--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
 }
 
 .container{
-    height: 98vh;
     min-width: 1440px;
     display: grid;
     grid-template-rows: 1fr 4fr 1fr;
@@ -97,4 +96,24 @@ img{
     grid-row-start: 2;
     grid-row-end: span 2;
     align-self: end;
+}
+
+@media screen and (max-width: 600px) {
+    .grid{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container{
+        min-width: 300px;
+        display: flex;
+    }
+
+}
+
+@media screen and (min-width: 600px) and (max-width: 1450px) {
+    .container{
+        min-width: 300px;
+        height: 100vh;
+    }
 }
