--- a/style.css
+++ b/style.css
@@ -18,9 +18,8 @@
 }
 
 .container{
-    min-width: 1440px;
-    display: grid;
-    grid-template-rows: 1fr 4fr 1fr;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -77,22 +76,18 @@ img{
     grid-column-end: 1;
     grid-row-start: 1;
     grid-row-end: span 2;
-    /* background-color: orange; */
 }
 
 .item-2{
-    /* background-color: red; */
     grid-row-start: 1;
 }
 
 .item-3{
-    /* background-color: green; */
     grid-row-start: 3;
     align-self: end;
 }
 
 .item-4{
-    /* background-color: pink; */
     grid-row-start: 2;
     grid-row-end: span 2;
     align-self: end;
@@ -106,14 +101,6 @@ img{
 
     .container{
         min-width: 300px;
-        display: flex;
     }
 
-}
-
-@media screen and (min-width: 600px) and (max-width: 1450px) {
-    .container{
-        min-width: 300px;
-        height: 100vh;
-    }
 }
