--- a/02 Work Layout/style.css
+++ b/02 Work Layout/style.css
@@ -1,104 +1,100 @@
-body {
-    background-color: #FEE2E2;
-    font-family: "Poppins", sans-serif;
-    line-height: 1.5;
-    color: rgba(78, 78, 78, 0.7);
-    font-weight: 500;
-}
+* {
+    font-family: 'Exo', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 
-.black {
-    color: rgb(31, 31, 31, 0.9);
-    font-weight: bolder;
-}
+  p{
+    color: lightgray;
+  }
 
-.reset{
-    color: rgba(78, 78, 78, 0.7);
-    font-weight: 500;
-}
-
-.container {
+.header, .footer{
     display: flex;
-    height: 100vh;
+    flex-direction: column;
     justify-content: center;
+    text-align: center;
+    height: 200px;
+}
+
+.container{
+    height: 98vh;
+    min-width: 1440px;
+    display: grid;
+    grid-template-rows: 1fr 4fr 1fr;
     align-items: center;
+    justify-content: center;
 }
 
-.box {
-    border-radius: 10px;
-    background-color: white;
-    padding: 20px;
+.header p {
+    color: orangered;
+    margin-bottom: 20px;
+    font-size: small;
 }
 
-.title {
-    display: flex;
-    justify-content: space-between;
-}
-
-.heading{
-    font-size: 1.5rem;
-}
-
-.sub-heading{
-    margin-top: 0;
-}
-
-.link {
-    display: inline-flex;
-    color: blueviolet;
-    align-items: center;
-}
-
-.link:hover {
-    cursor: pointer;
+.footer p{
     color: blue;
 }
 
-table {
-    width: 1000px;
-    border-collapse: collapse;
-}
-
-td {
-    padding: 5px;
-}
-
-tr {
-    height: 5rem;
-    border-bottom: 1px solid lightgrey;
-}
-
-tr:hover {
-    background-color: rgb(245, 239, 239);
-}
-
-.last-row{
-    border-bottom: none;
-}
-
-.chip-completed {
-    display: inline;
-    background-color: #DCFCE7;
-    color: #508565;
-    padding: 5px 10px 5px 10px;
-    border-radius: 50px;
-}
-
-.chip-pending {
-    display: inline;
-    background-color: #FEF9C3;
-    color: #BB7647;
-    padding: 5px 10px 5px 10px;
-    border-radius: 50px;
-}
-
-.chip-canceled {
-    display: inline;
-    background-color: #FEE2E2;
-    color: #A81D1D;
-    padding: 5px 10px 5px 10px;
-    border-radius: 50px;
-}
-
-.more:hover {
+.footer p:hover{
     cursor: pointer;
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 0.5fr 1fr;
+}
+
+
+.cards{
+    margin: 10px;
+    border-radius: 10px;
+    padding: 16px;
+    transition: 0.3s;
+}
+
+.cards:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    cursor: pointer;
+    transform: scale(1.009);
+}
+
+img{
+    width: 100%;
+    overflow: hidden;
+    height: auto;
+}
+
+.card-footer{
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+
+
+.item-1{
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: span 2;
+    /* background-color: orange; */
+}
+
+.item-2{
+    /* background-color: red; */
+    grid-row-start: 1;
+}
+
+.item-3{
+    /* background-color: green; */
+    grid-row-start: 3;
+    align-self: end;
+}
+
+.item-4{
+    /* background-color: pink; */
+    grid-row-start: 2;
+    grid-row-end: span 2;
+    align-self: end;
 }
