--- a/08 Subscribe Popup/style.css
+++ b/08 Subscribe Popup/style.css
@@ -17,6 +17,8 @@ body{
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
+    background-color: rgb(233,234,238);
+
 }
 
 .container{
@@ -25,7 +27,6 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 .container > div{
@@ -37,6 +38,7 @@ body{
     grid-template-columns: minmax(100px, 1fr) 1fr;
     border-radius: 10px;
     box-shadow: 0px 0px 30px 10px rgb(190, 189, 189);
+    background-color: white;
 }
 
 
